crates/abp-protocol/tests/snapshots/snapshot_protocol__protocol_event_assistant_delta.snap
---
source: crates/abp-protocol/tests/snapshot_protocol.rs
expression: value
---
{
  "event": {
    "text": "Let me look at ",
    "ts": "2024-06-15T12:30:00Z",
    "type": "assistant_delta"
  },
  "ref_id": "run-42",
  "t": "event"
}
