crates/abp-protocol/tests/snapshots/snapshot_protocol__protocol_fatal_no_ref.snap
---
source: crates/abp-protocol/tests/snapshot_protocol.rs
expression: value
---
{
  "error": "handshake timeout: no hello received within 5s",
  "ref_id": null,
  "t": "fatal"
}
