crates/abp-protocol/tests/snapshots/snapshot_protocol__protocol_final_with_receipt.snap
---
source: crates/abp-protocol/tests/snapshot_protocol.rs
expression: value
---
{
  "receipt": {
    "artifacts": [],
    "backend": {
      "adapter_version": null,
      "backend_version": "1.0",
      "id": "mock"
    },
    "capabilities": {
      "streaming": "native"
    },
    "meta": {
      "contract_version": "abp/v0.1",
      "duration_ms": 42,
      "finished_at": "2024-06-15T12:30:00Z",
      "run_id": "00000000-0000-0000-0000-000000000000",
      "started_at": "2024-06-15T12:30:00Z",
      "work_order_id": "00000000-0000-0000-0000-000000000001"
    },
    "mode": "mapped",
    "outcome": "complete",
    "receipt_sha256": null,
    "trace": [
      {
        "message": "started",
        "ts": "2024-06-15T12:30:00Z",
        "type": "run_started"
      }
    ],
    "usage": {
      "cache_read_tokens": null,
      "cache_write_tokens": null,
      "estimated_cost_usd": null,
      "input_tokens": 50,
      "output_tokens": 50,
      "request_units": null
    },
    "usage_raw": {
      "tokens": 100
    },
    "verification": {
      "git_diff": null,
      "git_status": null,
      "harness_ok": false
    }
  },
  "ref_id": "run-42",
  "t": "final"
}
