crates/abp-protocol/tests/snapshots/snapshot_protocol__protocol_jsonl_batch.snap
---
source: crates/abp-protocol/tests/snapshot_protocol.rs
expression: jsonl_output
---
{"t":"hello","contract_version":"abp/v0.1","backend":{"id":"test","backend_version":null,"adapter_version":null},"capabilities":{},"mode":"mapped"}
{"t":"event","ref_id":"run-1","event":{"ts":"2024-06-15T12:30:00Z","type":"run_started","message":"go"}}
{"t":"fatal","ref_id":"run-1","error":"boom"}
